--- a/style.css
+++ b/style.css
@@ -76,26 +76,24 @@ ul{
   align-items: center;
   gap: 16px;
   list-style: none;
+  
 }
 
-ul li{
+ul li a{
   display: flex;
+  justify-content: center;
+  text-decoration: none;
+  font: var(--preset2-bold);
+  color: var(--text-color);
+  background-color: var(--grey700);
   border: 1px solid var(--grey700);
   width: 304px;
-  justify-content: center;
-  background-color: var(--grey700);
   padding: 12px 0;
   border-radius: 8px;
   transition: background 1.1s;
 }
 
-ul li a{
-  text-decoration: none;
-  font: var(--preset2-bold);
-  color: var(--text-color);
-}
-
-ul li:hover{
+ul li a:hover{
   background-color: var(--green);
   cursor: pointer;
 }
